# Mips-Systemc

./: CMakeLists.txt  README.md  main-joao.cpp  main.cpp  test_memoria_ram.cpp  test_memoria_ram.h  test_or_1bit.cpp  test_or_1bit.h
ADDER_SHIFT_32_bits/: ADDER_SHIFT_32_bits.sln  adder_shift.cpp  adder_shift.h
ADDER_SHIFT_32_bits/ADDER_SHIFT_32_bits/: ADDER_SHIFT_32_bits.vcxproj  ADDER_SHIFT_32_bits.vcxproj.filters  main.cpp  test_adder_shift.cpp  test_adder_shift.h  wave_adder_shift.vcd
AND_32_bits/: AND_32_bits.sln  and_port.cpp
AND_32_bits/AND_32_bits/: AND_32_bits.vcxproj  AND_32_bits.vcxproj.filters  and_port.h  main.cpp  test_and_port.cpp  test_and_port.h  wave_and_port.vcd
CLOCK_DIV/: clock_div.cpp  clock_div.h
CONTROLE_ULA_32_bits/: CONTROLE_ULA_32_bits.sln  controle_ula.cpp  controle_ula.h
CONTROLE_ULA_32_bits/CONTROLE_ULA_32_bits/: CONTROLE_ULA_32_bits.vcxproj  CONTROLE_ULA_32_bits.vcxproj.filters  main.cpp  test_controle_ula.cpp  test_controle_ula.h  wave_controle_ula.vcd
Controle/: controle.cpp  controle.h  old_test.cpp  old_test.h
MUX_05/: mux_05.cpp  mux_05.h  old_test.cpp  old_test.h
MUX_32/: mux_32.cpp  mux_32.h
PC+4/: old_test.cpp  old_test.h  pc_add_4.cpp  pc_add_4.h
PC_32_bits/: PC_32_bits.sln
RAM_32_bits/: RAM_32_bits.sln  memoria_ram.cpp  memoria_ram.h
REGISTRADORES_32_bits/: main.cpp  registradores.cpp  registradores.h  test_registradores.cpp  test_registradores.h
SHIFT_LEFT_32_bits/: SHIFT_LEFT_32_bits.sln  shift_left.h
SIGN_EXTEND/: sign_extend.cpp  sign_extend.h
ULA_32_bits/: ULA_32_bits.sln  test_ula.cpp  ula.h
(+92 files in other folders)
